[package]
name = "DstageSolanaContracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dstage_solana_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
# mpl-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex-program-library" }
mpl-token-metadata = {version = "1.3.4", features = ["no-entrypoint"]}